# library-manager

./: README.md
.cache/clangd/index/: ansicolor_sink.h.60EF15FC22FE51B1.idx  async_log_helper.h.0B6CC1075C132DDA.idx  async_logger.h.A513AD5248396FEA.idx  async_logger_impl.h.94820602B3750D77.idx  base_sink.h.B98F55BA6E8D2307.idx  book.h.49629A88FAC04D9F.idx  book.h.D84B4490C6483B7B.idx  common.h.4DAC64052561EC26.idx  file_helper.h.86EB3E8F9C506DE0.idx  file_sinks.h.3BC3FB09F3E5526B.idx  fmt.h.3B4C4F1622284300.idx  format.cc.A0A57665E840DEE9.idx  format.h.49882E93FDBEE821.idx  formatter.h.6B7CF3907E7D8678.idx  log_msg.h.60770D4915EAC0DB.idx  logger.h.AD133F4EB4359F60.idx  logger_impl.h.01648B7F3D8F54CC.idx  mpmc_blocking_q.h.AF70A12EF7FB4988.idx  null_mutex.h.D05B2C44E81A88DC.idx  os.h.7A54FDAABD78F020.idx  pattern_formatter_impl.h.4B9FC92DB46B6031.idx  person.h.7CF2C019CB7A57BF.idx  person.h.D07242B007C5C13F.idx  registry.h.691FFB1F1466A4E9.idx  sink.h.23B2D9D2A7592784.idx  spdlog.h.D69CB87D4C1B9330.idx  spdlog_impl.h.CCE3DC4FDE9B9C72.idx  stdout_sinks.h.7A1FA8E0ADC6258C.idx  tweakme.h.8A41F9800AD5E6D3.idx
include/: book.h  person.h
src/: CMakeLists.txt  book.cpp  main.cpp  person.cpp
src/.cache/clangd/index/: book.cpp.4E6219B53EECFDA3.idx  book.cpp.A2E91B7B5748DD4B.idx  main.cpp.12CAF184029C84A4.idx  main.cpp.DC39CE8ABC325947.idx  person.cpp.44A0389FF621C9CE.idx  person.cpp.A80374BBA8A214A0.idx
